--- a/book-a-demo-calendar.html
+++ b/book-a-demo-calendar.html
@@ -15,8 +15,10 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-lg bg-blue w-100">
-    <div class="container-fluid">
-        <h1 class="navbar-brand" href="#">DocLib</h1>
+    <div class="container-fluid nav-container">
+        <div class="navbar-brand" href="#">
+            <img src="./images/Logo-1.svg" alt=""/>
+        </div>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -59,13 +61,13 @@
                 </ul>
             </div>
             <ul class="weekdays w-100 mb-2 bg-light-grey">
-                <li class="small-text fw-bold">MON</li>
-                <li class="small-text fw-bold">TUE</li>
-                <li class="small-text fw-bold">WED</li>
-                <li class="small-text fw-bold">THU</li>
-                <li class="small-text fw-bold">FRI</li>
-                <li class="small-text fw-bold">SAT</li>
-                <li class="small-text fw-bold">SUN</li>
+                <li class="small-text "><strong>MON</strong></li>
+                <li class="small-text "><strong>TUE</strong></li>
+                <li class="small-text "><strong>WED</strong></li>
+                <li class="small-text "><strong>THU</strong></li>
+                <li class="small-text "><strong>FRI</strong></li>
+                <li class="small-text "><strong>SAT</strong></li>
+                <li class="small-text "><strong>SUN</strong></li>
             </ul>
             <ul class="days bg-light-grey w-100">
                 <div class="w-100">
@@ -111,7 +113,7 @@
         </div>
         <div class="book-time d-flex flex-column justify-content-center ">
             <p class="normal-text">Book a 15-min meeting</p>
-            <p class="small-text fw-bold mt-4">What time works best?</p>
+            <p class="small-text mt-4"><strong>What time works best?</strong></p>
             <div class="times w-100 mt-4">
                 <div class="time bg-light-grey small-text text-center selected">1:00</div>
                 <div class="time bg-light-grey small-text text-center">1:15</div>
