--- a/book-a-demo-thank-you.html
+++ b/book-a-demo-thank-you.html
@@ -14,8 +14,10 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-lg bg-blue w-100">
-    <div class="container-fluid">
-        <h1 class="navbar-brand" href="#">DocLib</h1>
+    <div class="container-fluid nav-container">
+        <div class="navbar-brand" href="#">
+            <img src="./images/Logo-1.svg" alt=""/>
+        </div>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
