--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
     </div>
 </div>
 <nav
-        class="navbar hide1400 navbar-expand-lg bg-transparent position-absolute w-100"
+        class="navbar navbar-expand-lg bg-transparent position-absolute w-100"
 >
-    <div class="container-fluid">
+    <div class="container-fluid nav-container">
         <div class="navbar-brand" href="#">
-            <img src="./images/Logo.svg" alt=""/>
+            <img src="./images/Logo-1.svg" alt=""/>
         </div>
         <button
                 class="navbar-toggler"
@@ -194,81 +194,83 @@
                  style="left: 391px; top: 156px"
                  class="position-absolute small-bubble"
                  alt=""/>
-            <div class="big-bubble position-absolute d-flex justify-content-center align-items-center"
-                 style="right: 70px">
-                <div id="carouselExampleIndicators"
-                     class="carousel slide w-100"
-                     data-bs-ride="true">
-                    <div class="carousel-inner normal-text"
-                         style="text-align: center">
-                        <div class="carousel-item active fw-bold">
-                            <p class="normal-text">
-                                "All of the manual input and data entry takes too much
-                                time."
-                            </p>
-                        </div>
-                        <div class="carousel-item fw-bold">
-                            <p class="normal-text">
-                                "Why can’t I see the accounts payable workflow? I’m a VP of
-                                Finance, why is this a struggle?"
-                            </p>
-                        </div>
-                        <div class="carousel-item fw-bold">
-                            <p class="normal-text">"Ugh, a pending invoice issue again?"</p>
-                        </div>
-                        <div class="carousel-item fw-bold">
-                            <p class="normal-text">"Where’s that document I need?"</p>
-                        </div>
-                        <div class="carousel-item fw-bold">
-                            <p class="normal-text">
-                                "This audit is stressful enough; why can’t I find all of the
-                                documentation for it?"
-                            </p>
-                        </div>
-                        <div class="carousel-item fw-bold">
-                            <p class="normal-text">"Oh great, another emergency payment. 🙄"</p>
-                        </div>
-                        <div class="carousel-item fw-bold">
-                            <p class="normal-text">
-                                "How are we going to scale our team to keep up with these
-                                invoices? Maybe I’m thinking too big."
-                            </p>
-                        </div>
-                        <div class="carousel-item fw-bold">
-                            <p class="normal-text">
-                                "You’re not thinking too big. You need a software that can
-                                think big with you"
-                            </p>
-                        </div>
-                    </div>
-                    <button
-                            class="carousel-control-prev"
-                            type="button"
-                            data-bs-target="#carouselExampleIndicators"
-                            data-bs-slide="prev"
-                    >
+
+        </div>
+    </div>
+    <div class="big-bubble position-absolute d-flex justify-content-center align-items-center"
+         style="right: 70px">
+        <div id="carouselExampleIndicators"
+             class="carousel slide w-100"
+             data-bs-ride="true">
+            <div class="carousel-inner normal-text"
+                 style="text-align: center">
+                <div class="carousel-item active ">
+                    <p class="normal-text">
+                        "All of the manual input and data entry takes too much
+                        time."
+                    </p>
+                </div>
+                <div class="carousel-item ">
+                    <p class="normal-text">
+                        "Why can’t I see the accounts payable workflow? I’m a VP of
+                        Finance, why is this a struggle?"
+                    </p>
+                </div>
+                <div class="carousel-item ">
+                    <p class="normal-text">"Ugh, a pending invoice issue again?"</p>
+                </div>
+                <div class="carousel-item ">
+                    <p class="normal-text">"Where’s that document I need?"</p>
+                </div>
+                <div class="carousel-item ">
+                    <p class="normal-text">
+                        "This audit is stressful enough; why can’t I find all of the
+                        documentation for it?"
+                    </p>
+                </div>
+                <div class="carousel-item ">
+                    <p class="normal-text">"Oh great, another emergency payment. 🙄"</p>
+                </div>
+                <div class="carousel-item ">
+                    <p class="normal-text">
+                        "How are we going to scale our team to keep up with these
+                        invoices? Maybe I’m thinking too big."
+                    </p>
+                </div>
+                <div class="carousel-item ">
+                    <p class="normal-text">
+                        "You’re not thinking too big. You need a software that can
+                        think big with you"
+                    </p>
+                </div>
+            </div>
+            <button
+                    class="carousel-control-prev"
+                    type="button"
+                    data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="prev"
+            >
                 <span
                         class="carousel-control-prev-icon"
                         aria-hidden="true"
                 ></span>
-                        <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button
-                            class="carousel-control-next"
-                            type="button"
-                            data-bs-target="#carouselExampleIndicators"
-                            data-bs-slide="next"
-                    >
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button
+                    class="carousel-control-next"
+                    type="button"
+                    data-bs-target="#carouselExampleIndicators"
+                    data-bs-slide="next"
+            >
                 <span
                         class="carousel-control-next-icon"
                         aria-hidden="true"
                 ></span>
-                        <span class="visually-hidden">Next</span>
-                    </button>
-                </div>
-            </div>
+                <span class="visually-hidden">Next</span>
+            </button>
         </div>
     </div>
+
     <div class="my-container">
         <p id="carousel-text" class="mid-text fw-bolder w-50">
             Our goal is to take away <br/>all of these inner thoughts:
@@ -329,7 +331,7 @@
 </section>
 <section class="vh-50  ">
     <div
-            class="my-container justify-content-center align-items-center gap100"
+            class="my-container zero-padding justify-content-center align-items-center gap100"
     >
         <div
                 id="list-container"
@@ -345,10 +347,11 @@
 
             <div class="to-do-list d-block w-100 mt-5">
                 <div class="d-flex align-items-center justify-content-around w-100">
-                    <p class="normal-text text-grey fw-bold d-inline-block">
+                    <p id="before-doclib" class="normal-text text-grey fw-bold d-inline-block">
                         Before DocLib
                     </p>
                     <p
+                            id="after-doclib"
                             class="normal-text color-yellow fw-bold d-inline-block"
                             style="position: relative; right: 30px"
                     >
@@ -358,6 +361,7 @@
 
                 <div class="list d-block text-start mt-4 position-relative">
                     <p
+
                             class="mid-text fw-bold"
                             style="
                   padding-top: 2rem !important;
@@ -367,62 +371,66 @@
                         To Do List
                     </p>
                     <ul class="list-items-container">
-                        <li data-list="before" class="list-item small-text">
-                            Route invoices for approval to managers and executives
-                        </li>
-                        <li data-list="before" class="list-item small-text">
-                            Key invoices into our ERP
-                        </li>
-                        <li data-list="before" class="list-item small-text">
-                            Follow up with approvers to ensure they review in time
-                        </li>
-                        <li data-list="before" class="list-item small-text">
-                            Manage credit holds with suppliers and attempt to keep from
-                            interrupting production
-                        </li>
-                        <li data-list="before" class="list-item small-text">
-                            Maintain a spreadsheet of various invoices still in process
-                            with variances in the 3-way match
-                        </li>
-                        <li data-list="before" class="list-item small-text">
-                            Work with purchasing and receiving to pull together all the
-                            documentation to make decisions on a 3-way match discrepancy
-                        </li>
-                        <li data-list="before" class="list-item small-text">
-                            Look up credit terms in ERP to prioritize invoices eligible
-                            for discounts with early payment
-                        </li>
-                        <li data-list="before" class="list-item small-text">
-                            Sift through filing cabinets to find supplier documents
-                        </li>
-                        <li data-list="before" class="list-item small-text">
-                            Struggle with auditors in explaining the history of various
-                            random transactions
-                        </li>
-                        <li data-list="after" class="list-item small-text">
-                            Manage exceptions to our automated process
-                        </li>
-                        <li data-list="after" class="list-item small-text">
-                            Spend time doing valuable work such as building relationships
-                            with suppliers, targeting areas of increased savings, build
-                            reports to grow efficiencies in accounts payable
-                        </li>
-                        <li data-list="after" class="list-item small-text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Eaque.2
-                        </li>
-                        <li data-list="after" class="list-item small-text">
-                            Lorem ipsum dolor sit amet, consectetuer adipiscing.2
-                        </li>
-                        <li data-list="after" class="list-item small-text">
-                            Lorem ipsum dolor sit amet.2
-                        </li>
-                        <li data-list="after" class="list-item small-text">
-                            Lorem ipsum dolor sit amet, consectetuer adipiscing.2
-                        </li>
+                        <div class="items-before">
+                            <li data-list="before" class="list-item small-text">
+                                Route invoices for approval to managers and executives
+                            </li>
+                            <li data-list="before" class="list-item small-text">
+                                Key invoices into our ERP
+                            </li>
+                            <li data-list="before" class="list-item small-text">
+                                Follow up with approvers to ensure they review in time
+                            </li>
+                            <li data-list="before" class="list-item small-text">
+                                Manage credit holds with suppliers and attempt to keep from
+                                interrupting production
+                            </li>
+                            <li data-list="before" class="list-item small-text">
+                                Maintain a spreadsheet of various invoices still in process
+                                with variances in the 3-way match
+                            </li>
+                            <li data-list="before" class="list-item small-text">
+                                Work with purchasing and receiving to pull together all the
+                                documentation to make decisions on a 3-way match discrepancy
+                            </li>
+                            <li data-list="before" class="list-item small-text">
+                                Look up credit terms in ERP to prioritize invoices eligible
+                                for discounts with early payment
+                            </li>
+                            <li data-list="before" class="list-item small-text">
+                                Sift through filing cabinets to find supplier documents
+                            </li>
+                            <li data-list="before" class="list-item small-text">
+                                Struggle with auditors in explaining the history of various
+                                random transactions
+                            </li>
+                        </div>
+                        <div class="items-after">
+                            <li data-list="after" class="list-item small-text">
+                                Manage exceptions to our automated process
+                            </li>
+                            <li data-list="after" class="list-item small-text">
+                                Spend time doing valuable work such as building relationships
+                                with suppliers, targeting areas of increased savings, build
+                                reports to grow efficiencies in accounts payable
+                            </li>
+                            <li data-list="after" class="list-item small-text">
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                Eaque.2
+                            </li>
+                            <li data-list="after" class="list-item small-text">
+                                Lorem ipsum dolor sit amet, consectetuer adipiscing.2
+                            </li>
+                            <li data-list="after" class="list-item small-text">
+                                Lorem ipsum dolor sit amet.2
+                            </li>
+                            <li data-list="after" class="list-item small-text">
+                                Lorem ipsum dolor sit amet, consectetuer adipiscing.2
+                            </li>
+                        </div>
                     </ul>
                     <img
-                            class="position-absolute draggable"
+                            class="position-absolute draggable h-100"
                             style="top: -23px; left: 49%"
                             id="slider"
                             src="images/Before-After%20Slider.svg"
@@ -601,7 +609,7 @@
     </section>
 </div>
 <footer
-        class="w-100  vh-100 bg-red position-relative overflow-hidden d-flex justify-content-center position-relative flex-column align-items-center"
+        class="w-100 footer-fit  vh-100 bg-red position-relative overflow-hidden d-flex justify-content-center position-relative flex-column align-items-center"
         style="padding-top: 10rem; padding-bottom: 5rem"
 >
     <div class="red-grid position-absolute"></div>
