--- a/inside-product.html
+++ b/inside-product.html
@@ -13,8 +13,10 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-lg bg-blue w-100">
-    <div class="container-fluid">
-        <h1 class="navbar-brand" href="#">DocLib</h1>
+    <div class="container-fluid nav-container">
+        <div class="navbar-brand" href="#">
+            <img src="./images/Logo-1.svg" alt=""/>
+        </div>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -106,7 +108,8 @@
                     </div>
 
                 </div>
-                <p class="normal-text mt-3 mb-3">Finally, a simple, effective way to save time and take some busy work off your
+                <p class="normal-text mt-3 mb-3">Finally, a simple, effective way to save time and take some busy work
+                    off your
                     plate.</p>
                 <ul class="mt-3 mb-3" style="list-style: disc;padding-left: 1.5rem !important;">
                     <li class="small-text">3-way matching</li>
@@ -149,16 +152,16 @@
                     </div>
 
                 </div>
-                <p class="normal-text">
+                <p class="normal-text mt-3 mb-3">
                     We meet you where your systems are, getting your team setup for software integration success. In
                     fact, we have a rep for being the best in the world with QAD users.
                 </p>
-                <ul style="list-style: disc;padding-left: 1.5rem !important;">
+                <ul class="mt-3 mb-3" style="list-style: disc;padding-left: 1.5rem !important;">
                     <li class="small-text">ERP software</li>
                     <li class="small-text">Office productivity software</li>
                     <li class="small-text">Accounting software</li>
                 </ul>
-                <div class="fw-bolder small-text inside-product-bkad w-100">
+                <div class="fw-bolder  mt-3 small-text inside-product-bkad w-100">
                     <p class="fw-bolder small-text" style="width: 380px">
                         Want to see how DocLib automates accounts payable processes in action?
 
@@ -190,18 +193,18 @@
                     </div>
 
                 </div>
-                <p class="normal-text">
+                <p class="normal-text mt-3 mb-3">
                     Never lose a file or receipt again. With easy-to-follow nomenclature, everyone that needs access
                     will have access to every file within your ERP: whether you’re on-the-go or in the office.
                 </p>
-                <ul style="list-style: disc;padding-left: 1.5rem !important;">
+                <ul class="mt-3 mb-3" style="list-style: disc;padding-left: 1.5rem !important;">
                     <li class="small-text">Desktop + mobile access to dashboard reporting and management</li>
                     <li class="small-text">Exception processing with email-driven workflows</li>
                     <li class="small-text">Capture + store paper invoices and packing lists with Advanced Capture</li>
                     <li class="small-text">Digital copies of purchase orders, packing lists, receivers, and invoices
                     </li>
                 </ul>
-                <div class="fw-bolder small-text inside-product-bkad w-100">
+                <div class="fw-bolder mt-3 small-text inside-product-bkad w-100">
                     <p class="fw-bolder small-text" style="width: 380px">
                         Want to see how DocLib automates accounts payable processes in action?
 
@@ -231,16 +234,16 @@
                     </div>
 
                 </div>
-                <p class="normal-text">
+                <p class="normal-text mt-3 mb-3">
                     Well…as breezy as an audit experience can be.
                 </p>
-                <ul style="list-style: disc;padding-left: 1.5rem !important;">
+                <ul class="mt-3 mb-3" style="list-style: disc;padding-left: 1.5rem !important;">
                     <li class="small-text">Detailed audit trails</li>
                     <li class="small-text">All information automatically populates in one place for auditors</li>
                     <li class="small-text">Eliminate time-sensitive searching</li>
                     <li class="small-text">Decrease emergency chat messages</li>
                 </ul>
-                <div class="fw-bolder small-text inside-product-bkad w-100">
+                <div class="fw-bolder mt-3 small-text inside-product-bkad w-100">
                     <p class="fw-bolder small-text" style="width: 380px">
                         Want to see how DocLib automates accounts payable processes in action?
 
@@ -257,11 +260,11 @@
 </div>
 <footer
         class="w-100  position-relative overflow-hidden d-flex justify-content-center position-relative flex-column align-items-center"
-        style="padding-top: 10rem; padding-bottom: 5rem"
+        style="padding-top: 10rem; padding-bottom: 3rem"
 >
     <div class="position-absolute"></div>
     <div
-            class="my-container h-100 text-center d-flex justify-content-between flex-column align-items-center"
+            class="my-container text-center d-flex justify-content-between flex-column align-items-center"
             style="z-index: 1"
     >
         <div class="footer-menu">
